--- a/php.project/src/org/netbeans/modules/php/project/connections/sync/ProgressPanel.form
+++ b/php.project/src/org/netbeans/modules/php/project/connections/sync/ProgressPanel.form
@@ -29,12 +29,8 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="progressPanelHolder" max="32767" attributes="0"/>
+                  <Component id="progressPanelHolder" pref="383" max="32767" attributes="0"/>
                   <Component id="progressMessagePanelHolder" max="32767" attributes="0"/>
-                  <Group type="102" attributes="0">
-                      <Component id="infoLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -44,8 +40,6 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="infoLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
               <Component id="summaryPanelHolder" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
               <Component id="progressPanelHolder" min="-2" max="-2" attributes="0"/>
@@ -57,13 +51,6 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="infoLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/php/project/connections/sync/Bundle.properties" key="ProgressPanel.infoLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-      </Properties>
-    </Component>
     <Container class="javax.swing.JPanel" name="summaryPanelHolder">
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
