--- a/options.editor/src/org/netbeans/modules/options/colors/HighlightingPanel.form
+++ b/options.editor/src/org/netbeans/modules/options/colors/HighlightingPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.3" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
@@ -21,7 +21,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="cpCategories" pref="206" max="32767" attributes="0"/>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lBackground" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lForeground" alignment="0" min="-2" max="-2" attributes="0"/>
