--- a/options.editor/src/org/netbeans/modules/options/colors/SyntaxColoringPanel.form
+++ b/options.editor/src/org/netbeans/modules/options/colors/SyntaxColoringPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.3" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
@@ -19,7 +19,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="spPreview" alignment="0" pref="414" max="32767" attributes="0"/>
+                  <Component id="spPreview" alignment="0" pref="425" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="lLanguage" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -28,7 +28,7 @@
                   <Component id="lCategory" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="spCategories" pref="201" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lEffectColor" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lForeground" alignment="0" min="-2" max="-2" attributes="0"/>
